# wayshot

libwayshot/: Cargo.toml
wayshot/: Cargo.toml
wayshot/src/: utils.rs  wayshot.rs
