[package]
authors = ["Shinyzenith <https://aakash.is-a.dev>"]
description = "Screenshot crate for wlroots based compositors implementing the zwlr_screencopy_v1 protocol."
keywords = ["screenshot", "wayland", "wayshot", "wlroots"]
license = "BSD-2-Clause"
repository = "https://git.sr.ht/~shinyzenith/wayshot"
name = "libwayshot"
version = "0.3.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false }
memmap2 = "0.9.0"
nix = { version = "0.27", features = ["fs", "mman"] }
thiserror = "1"
tracing = "0.1"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
