[package]
authors = ["Shinyzenith <https://aakash.is-a.dev>"]
description = "Screenshot tool for wlroots based compositors implementing the zwlr_screencopy_v1 protocol."
documentation = "https://docs.rs/crate/wayshot/latest"
edition = "2021"
homepage = "https://waycrate.github.io"
keywords = ["screenshot", "wayland", "wlroots"]
license = "BSD-2-Clause"
name = "wayshot"
repository = "https://git.sr.ht/~shinyzenith/wayshot"
version = "1.3.1"

[[bin]]
name = "wayshot"
path = "src/wayshot.rs"

[dependencies]
clap = "4.4.6"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "pnm",
  "qoi"
] }
libwayshot = { path = "../libwayshot", version = "0.3.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
flate2 = "1.0.27"
